@@ -1,3 +1,13 @@
+2009-02-25  Jian Li  <jianli@chromium.org>
+
+        Reviewed by Alexey Proskuryakov.
+
+        Remove "#if ENABLE(WORKERS)" wrap from CrossThreadCopier files.
+        https://bugs.webkit.org/show_bug.cgi?id=24145
+
+        * platform/CrossThreadCopier.cpp:
+        * platform/CrossThreadCopier.h:
+
 2009-02-25  David Levin  <levin@chromium.org>
 
         Reviewed by Alexey Proskuryakov.
